--- a/lib/src/utilities/variables.scss
+++ b/lib/src/utilities/variables.scss
@@ -44,9 +44,10 @@ $font-weights: (
 
 // Miscellaneous
 $easing: ease-out !default;
-$radius-small: 2px !default;
-$radius: 4px !default;
-$radius-large: 6px !default;
+$radius-small: 4px !default;
+$radius: 6px !default;
+$radius-medium: 8px !default;
+$radius-large: 12px !default;
 $radius-rounded: 290486px !default;
 $speed: 86ms !default;
 
