--- a/web/src/app/component/navbar.component.html
+++ b/web/src/app/component/navbar.component.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <div class="container is-fluid">
+  <div class="container">
 
     <h1 class="title is-1">Navbar</h1>
 
@@ -97,20 +97,12 @@
       </nav>
     </div>
 
-    <h2 class="title is-3">Variables</h2>
+    <h2 class="title is-3">Changes</h2>
 
     <div class="block">
-      <p>$navbar-dropdown-item-color: $text;</p>
+      <p>Create .navbar-item-content to use as content container same as .navbar-link but for non-link content</p>
+      <p>Change too small dropdown font-size from 0.875rem to $size-normal</p>
     </div>
 
-    <h2 class="title is-3">Bulma Variable</h2>
-
-    <div class="block">
-      <p>$navbar-item-hover-color: $link;</p>
-      <p>$navbar-item-hover-background-color: $white-bis;
-      </p>
-      <p>$navbar-dropdown-item-hover-color: $black;</p>
-      <p>$navbar-dropdown-item-hover-background-color: $background;</p>
-    </div>
   </div>
 </section>
