--- a/web/src/app/element/badge.component.html
+++ b/web/src/app/element/badge.component.html
@@ -1,11 +1,15 @@
 <section class="section">
-  <div class="container is-fluid">
+  <div class="container">
 
     <h1 class="title is-1">Badge</h1>
 
     <h2 class="title is-3">Basic Usage</h2>
 
     <div class="block">
+      .badge and content as inner text
+    </div>
+    <div class="block">
+      &lt;div class="badge"&gt;1&lt;/div&gt;
       <div class="badge">
         1
       </div>
@@ -15,7 +19,7 @@
 
     <div class="block">
       <div class="block">
-        Color
+        .is-[color]
       </div>
       <div class="block">
         <div class="badge is-primary">
