--- a/web/src/app/element/box.component.html
+++ b/web/src/app/element/box.component.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <div class="container is-fluid">
+  <div class="container">
 
     <h1 class="title is-1">Box</h1>
 
@@ -16,7 +16,7 @@
 
     <div class="block">
       <div class="box">
-        Box
+        .box
       </div>
     </div>
 
@@ -25,7 +25,7 @@
     <div class="block">
       <div class="box is-highlighted">
         <div class="block">
-          is-highlighted
+          .is-highlighted
         </div>
         <div class="block">
           <p>related variable:</p>
@@ -36,17 +36,24 @@
 
     <div class="block">
       <div class="box is-bordered">
-        is-bordered
+        .is-bordered
       </div>
     </div>
 
     <div class="block">
       <div class="box has-box-detail">
-        box has-box-detail
+        .box.has-box-detail
       </div>
       <div class="box-detail">
-        box-detail
+        .box-detail
       </div>
+    </div>
+
+    <h2 class="title is-3">Changes</h2>
+
+    <div class="block">
+      <p>Add is-highlighted, is-bordered</p>
+      <p>Add has-box-detail co-working with box-detail</p>
     </div>
 
     <h2 class="title is-3">Variables</h2>
