--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -6,6 +6,8 @@
 $section-gap: 24px;
 @use "../../lib/src/trunks" with ( // Font Family
     $family-sans-serif: 'BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif',
+    $table-head-cell-color: white, // thead > th
+    $table-cell-text-align: left, // th
 );
 
 .test {
